<resources>
    <string name="app_name">LADapp</string>
    <string name="action_settings">Settings</string>
    <string name="button_forward">Forward</string>
    <string name="button_backward">Backward</string>
    <string name="button_stop">Stop Moving</string>
    <string name="button_new_task">Schedule an Item Pickup</string>
    <string name="switch_enable_control">Enable Manual Controls</string>
    <string name="manual_drive_control">Manual LAD Control</string>
    <string name="scheduled_tasks">Scheduled Items:</string>
    <string name="new_scheduled_task">New Scheduled Item:</string>
    <string name="schedule_name">New Scheduled Item Name:</string>
    <string name="enter_tasks_item_name_here">ex: Grandma\'s Pills</string>
    <string name="on">On:</string>
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="atTime">\@</string>
    <string name="timeExample">ex: 9:30AM</string>
    <string name="edit_schedule_order">Edit Schedule Order:</string>
    <string name="create">Create</string>
    <string name="commandStatus">Command Status: </string>
    <string name="commandStatusIdle">No Command Pending.</string>
    <string name="commandStatusPreExec">Preparing to Send..</string>
    <string name="commandStatusBackGround">Sending Command...</string>
    <string name="commandStatusPostExecPass"> Command Successfully Sent!</string>
    <string name="commandStatusPostExecFail"> Command failed to Send.</string>
    <string name="line_traversal_controls">Line Traversal:</string>
    <string name="arm_manipulation">Arm Manipulation:</string>
    <string name="wrist_articulation">Wrist Articulation:</string>
    <string name="reset_elevation">Reset Elevation</string>
    <string name="_10">+10\'</string>
    <string name="minus10">-10\'</string>
    <string name="_1">+1\'</string>
    <string name="reset_wrrist_position">Reset Position</string>
    <string name="run_task_now">Run Task Now</string>
    <string name="minus1">-1\'</string>
    <string name="emergency_stop">Emergency Stop</string>
    <string name="claw_control">Claw Control:</string>
    <string name="release">Release</string>
    <string name="tighten">Tighten</string>
    <string name="from">From:</string>
    <string name="pickup">Pickup:</string>
    <string name="list_of_existing_locations_go_here">--List of existing locations go here--</string>
</resources>
