<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTaskActivity">

    <TextView
        android:id="@+id/scheduleNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/schedule_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pickupItemLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/pickup"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scheduleNameLabel" />

    <TextView
        android:id="@+id/onDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/on"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskNameBox" />

    <TextView
        android:id="@+id/fromLOcationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/from"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sundayButton" />

    <TextView
        android:id="@+id/atTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/atTime"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/taskNameBox"
        app:layout_constraintStart_toEndOf="@+id/taskNameBox"
        app:layout_constraintTop_toTopOf="@+id/taskNameBox" />

    <EditText
        android:id="@+id/taskNameBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="?attr/editTextColor"
        android:backgroundTintMode="src_atop"
        android:ems="10"
        android:hint="@string/enter_tasks_item_name_here"
        android:importantForAutofill="no"
        android:inputType="textShortMessage|textAutoCorrect|text|textCapWords"
        android:singleLine="true"
        android:textStyle="normal"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scheduleNameLabel" />

    <EditText
        android:id="@+id/taskTimeBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="?attr/editTextColor"
        android:backgroundTintMode="src_atop"
        android:ems="10"
        android:hint="@string/timeExample"
        android:importantForAutofill="no"
        android:inputType="textShortMessage|datetime|text|textCapCharacters|time"
        android:singleLine="true"
        android:textStyle="normal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/taskNameBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/atTimeLabel"
        app:layout_constraintTop_toBottomOf="@+id/scheduleNameLabel" />

    <ToggleButton
        android:id="@+id/sundayButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:clickable="true"
        android:contextClickable="true"
        android:longClickable="true"
        android:soundEffectsEnabled="true"
        android:text="@string/sunday"
        android:textOff="@string/sunday"
        android:textOn="@string/sunday"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/onDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/taskNameBox" />

    <ToggleButton
        android:id="@+id/mondayButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:clickable="true"
        android:contextClickable="true"
        android:longClickable="true"
        android:soundEffectsEnabled="true"
        android:text="@string/monday"
        android:textOff="@string/monday"
        android:textOn="@string/monday"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/sundayButton"
        app:layout_constraintTop_toBottomOf="@+id/taskNameBox" />

    <ToggleButton
        android:id="@+id/tuesdayButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:clickable="true"
        android:contextClickable="true"
        android:longClickable="true"
        android:soundEffectsEnabled="true"
        android:text="@string/tuesday"
        android:textOff="@string/tuesday"
        android:textOn="@string/tuesday"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/mondayButton"
        app:layout_constraintTop_toBottomOf="@+id/taskNameBox" />

    <ToggleButton
        android:id="@+id/wednesdayButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:clickable="true"
        android:contextClickable="true"
        android:longClickable="true"
        android:soundEffectsEnabled="true"
        android:text="@string/wednesday"
        android:textOff="@string/wednesday"
        android:textOn="@string/wednesday"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/tuesdayButton"
        app:layout_constraintTop_toBottomOf="@+id/taskNameBox" />

    <ToggleButton
        android:id="@+id/thursdayButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:clickable="true"
        android:contextClickable="true"
        android:longClickable="true"
        android:soundEffectsEnabled="true"
        android:text="@string/thursday"
        android:textOff="@string/thursday"
        android:textOn="@string/thursday"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/wednesdayButton"
        app:layout_constraintTop_toBottomOf="@+id/taskNameBox" />

    <ToggleButton
        android:id="@+id/fridayButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:clickable="true"
        android:contextClickable="true"
        android:longClickable="true"
        android:soundEffectsEnabled="true"
        android:text="@string/friday"
        android:textOff="@string/friday"
        android:textOn="@string/friday"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/thursdayButton"
        app:layout_constraintTop_toBottomOf="@+id/taskNameBox" />

    <ToggleButton
        android:id="@+id/saturdayButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:clickable="true"
        android:contextClickable="true"
        android:longClickable="true"
        android:soundEffectsEnabled="true"
        android:text="@string/saturday"
        android:textOff="@string/saturday"
        android:textOn="@string/saturday"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/fridayButton"
        app:layout_constraintTop_toBottomOf="@+id/taskNameBox" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:text="@android:string/cancel"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#5E2196F3"
        android:clickable="true"
        android:text="@string/create"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/dynamicTaskLocList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="#28686868"
        android:backgroundTintMode="src_over"
        android:scrollbars="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/createButton"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/possibleList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_of_existing_locations_go_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromLOcationLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>