<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/clawRButton"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="#2196F3"
        android:backgroundTintMode="src_atop"
        android:onClick="openClaw"
        android:text="@string/release"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/lowerArmButton"
        app:layout_constraintTop_toTopOf="@+id/clawTButton" />

    <Button
        android:id="@+id/clawTButton"
        android:layout_width="107dp"
        android:layout_height="47dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#2196F3"
        android:backgroundTintMode="src_atop"
        android:onClick="closeClaw"
        android:text="@string/tighten"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clawControlLabel" />

    <Button
        android:id="@+id/btnTurnRight"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#662196F3"
        android:backgroundTintMode="src_atop"
        android:foreground="@android:drawable/ic_media_ff"
        android:onClick="driveRight"
        android:tooltipText="Turn right at intersections only."
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/btnStop"
        app:layout_constraintStart_toEndOf="@+id/btnForward"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/runTaskNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#BA68C8"
        android:hapticFeedbackEnabled="true"
        android:onClick="runTaskNow"
        android:text="@string/run_task_now"
        android:tooltipText="Preempts all scheduled items with the selected item."
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/itemList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/itemList"
        app:layout_constraintTop_toTopOf="@+id/itemList" />

    <Button
        android:id="@+id/wristDownButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#DC2196F3"
        android:backgroundTintMode="src_atop"
        android:onClick="moveWristDown"
        android:text="@string/minus1"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/lowerArmButton"
        app:layout_constraintTop_toTopOf="@+id/wristUpButton" />

    <TextView
        android:id="@+id/wristControlLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:text="@string/wrist_articulation"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/motorControlLabel"
        app:layout_constraintTop_toBottomOf="@+id/raiseArmButton" />

    <TextView
        android:id="@+id/clawControlLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:text="@string/claw_control"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/motorControlLabel"
        app:layout_constraintTop_toBottomOf="@+id/wristUpButton" />

    <Button
        android:id="@+id/wristUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#DC2196F3"
        android:backgroundTintMode="src_atop"
        android:onClick="moveWristUp"
        android:text="@string/_1"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wristControlLabel" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_add"
        android:tooltipText="Hit me to make a new Scheduled Task."
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="74dp"
        app:useCompatPadding="false" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#FF1744"
        android:hapticFeedbackEnabled="true"
        android:text="@string/emergency_stop"
        android:tooltipText="Sends the LAD an Emergency stop command. NOTE: Manual Drive is set to disabled after use."
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resetElevationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#FF9800"
        android:hapticFeedbackEnabled="true"
        android:text="@string/reset_elevation"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnStop"
        app:layout_constraintTop_toTopOf="@+id/lowerArmButton" />

    <Button
        android:id="@+id/resetWristPitchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#FF9800"
        android:hapticFeedbackEnabled="true"
        android:text="@string/reset_wrrist_position"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnStop"
        app:layout_constraintTop_toTopOf="@+id/wristDownButton" />

    <Button
        android:id="@+id/btnForward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="66dp"
        android:backgroundTint="#662196F3"
        android:backgroundTintMode="src_atop"
        android:onClick="driveForward"
        android:text="@string/button_forward"
        android:tooltipText="Onwards to Victory!"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/btnStop"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/raiseArmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#A12196F3"
        android:backgroundTintMode="src_atop"
        android:onClick="moveUpArm"
        android:text="@string/_10"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/armControlsLabel" />

    <Button
        android:id="@+id/btnTurnLeft"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="#662196F3"
        android:backgroundTintMode="src_atop"
        android:foreground="@android:drawable/ic_media_rew"
        android:foregroundTint="#FFFFFF"
        android:onClick="driveLeft"
        android:tooltipText="Turn left at intersections only."
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnForward" />

    <Button
        android:id="@+id/lowerArmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#A12196F3"
        android:backgroundTintMode="src_atop"
        android:onClick="moveDownArm"
        android:text="@string/minus10"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/resetElevationButton"
        app:layout_constraintStart_toEndOf="@+id/raiseArmButton"
        app:layout_constraintTop_toTopOf="@+id/raiseArmButton" />

    <Switch
        android:id="@+id/enableSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:checked="false"
        android:hapticFeedbackEnabled="true"
        android:text="@string/switch_enable_control"
        android:textColorHighlight="#4DB4B4B4"
        android:textColorLink="@android:color/darker_gray"
        android:thumbTint="#00BCD4"
        android:tooltipText="Enables or disables the LAD's Manual Drive Controls."
        android:trackTint="@android:color/darker_gray"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/manualLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:text="@string/manual_drive_control"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tasksLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:clickable="false"
        android:text="@string/scheduled_tasks"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cmdStatusLabel" />

    <Spinner
        android:id="@+id/itemList"
        android:layout_width="201dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:tooltipText="Choose an existing Task to view."
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/wristUpButton"
        app:layout_constraintTop_toBottomOf="@+id/tasksLabel" />

    <TextView
        android:id="@+id/newSchedTaskLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:clickable="false"
        android:text="@string/new_scheduled_task"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/newItemButton" />

    <TextView
        android:id="@+id/cmdStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:text="@string/commandStatus"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clawTButton" />

    <TextView
        android:id="@+id/motorControlLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:text="@string/line_traversal_controls"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manualLabel" />

    <TextView
        android:id="@+id/armControlsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:text="@string/arm_manipulation"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/motorControlLabel"
        app:layout_constraintTop_toBottomOf="@+id/btnForward" />

    <TextView
        android:id="@+id/commandStatusFieldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:clickable="false"
        android:textStyle="normal"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/cmdStatusLabel"
        app:layout_constraintTop_toTopOf="@+id/cmdStatusLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>